glFusion ChangeLog

v1.1.2
------
- Account Settings interface naming consistency fixes (Eric)
- Removed unused gltips.thtml template file (Eric)
- Log error message when token check fails (Mark)
- Cleaned up Configuration screen setting labels, made more uniform (Eric)
- Added missing addchild.png image for Links plugin Category admin screen (Eric)
- Added Bulgarian install language (Mark)
- Added styled error message (Eric)
- Fixed AM/PM going onto second line randomly in forum lastx view (Eric)
- Fixed bug where searching for _just_ a date range would fail (Mark)
- Replaced ini_set() calls for include path to set_include_path() (Mark)
- Redesigned the layout of the install screens (Eric)
- Removed height property from .profile-image to maintain original aspect ratio
  of picture (issue 333) (Eric)
- Updated version numbers (Mark)
- Updated htmLawed to v1.1.6 (Mark)
- Fixed issue where user groups did not save from user edit screen (Mark)
- Prevent mailer from crashing if unable to connect to SMTP server (Mark)
- Enlarged the plaintext entry box for email story and contact user (Mark)
- Fixed issue where HTML emails were being sent in plain text format (Mark)
- Fixed a couple of bugs when mailing a story:
   - HTML mode was not honored
   - Selecting plain text did not work
- Reworked forgotten password handling (Mark)
- Rewrote install / upgrade routines (Mark)
- Implemented plugin upload / auto install (Mark)
- Upgrade FCKEditor to latest production release (Mark)
- Detect crashed sessions table and attempt to auto repair (Mark)
- Validate arrays prior to using them - prevent permission crashes (Mark)
- Fixed missing global declaration in image watermarking (Mark)
- Do not use config cache if not writable (Mark)
- Added new COM_isWritable()  (Mark)
- Refreshed PEAR libraries with latest versions (Mark)
- Resolved a search issue if query was empty but topic was not (mark)
- Implemented a 'clone story' feature (Mark)